# fullstack-solution-template-for-agentcore

./: .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/: labeler.yml
.github/workflows/: dependabot.yml
docker/: Dockerfile.frontend.dev
docs/: AGENT_CONFIGURATION.md  DEPLOYMENT.md  GATEWAY.md  LOCAL_DEVELOPMENT.md  README.md  STREAMING.md  TOOL_AC_CODE_INTERPRETER.md
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx
frontend/src/components/chat/: ChatHeader.tsx  ChatInterface.tsx  ChatMessage.tsx  MarkdownRenderer.tsx
frontend/src/lib/agentcore-client/: client.ts  types.ts
frontend/src/lib/agentcore-client/parsers/: langgraph.ts
frontend/src/services/: agentCoreService.js
gateway/tools/sample_tool/: sample_tool_lambda.py  tool_spec.json
gateway/utils/: __init__.py  gateway_access_token.py
infra-cdk/: config.yaml  package-lock.json  package.json
infra-cdk/lambdas/feedback/: index.py
infra-cdk/lambdas/gateway-custom-resource/: index.py  requirements.txt
infra-cdk/lib/: backend-stack.ts  fast-main-stack.ts  gasp-cdk-stack.ts  gasp-main-stack.ts
infra-cdk/lib/utils/: agentcore-role.ts  config-manager.ts
infra-terraform/scripts/: deploy-frontend.py  test-agent.py
patterns/langgraph-single-agent/: Dockerfile  langgraph_agent.py  requirements.txt
patterns/strands-single-agent/: Dockerfile  basic_agent.py  requirements.txt
scripts/: README.md  create-admin-user.sh  deploy-frontend.py  deploy-with-codebuild.py  post-deploy.py  test-agent-invocation.py  test-feedback-api.py  utils.py
test-scripts/: README.md  test-agent-docker.py  test-agent.py  test-feedback-api.py  test-gateway.py  test-memory.py
tools/code_interpreter/: code_interpreter_tools.py
