[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genaiid-agentcore-starter-pack"
version = "0.1.0"
description = "GenAIID AgentCore Starter Pack - A template for building AgentCore applications"
readme = "README.md"
license = {text = "MIT-0"}
requires-python = ">=3.9"
authors = [
    {name = "AWS Professional Services", email = "aws-professional-services@amazon.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies for gateway utilities
dependencies = [
    "boto3>=1.34.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# Agent dependencies (for local development)
agent = [
    "strands-agents",
    "bedrock-agentcore[strands-agents]",
    "mcp",
]

# All dependencies for local development
all = [
    "genaiid-agentcore-starter-pack[dev,agent]"
]

[project.urls]
Homepage = "https://github.com/aws-samples/genaiid-agentcore-starter-pack"
Documentation = "https://github.com/aws-samples/genaiid-agentcore-starter-pack/tree/main/docs"
Repository = "https://github.com/aws-samples/genaiid-agentcore-starter-pack"
Issues = "https://github.com/aws-samples/genaiid-agentcore-starter-pack/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gateway*", "scripts*"]
exclude = ["tests*", "infra-cdk*", "frontend*", "patterns*"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101", "S603", "S607"]  # Allow assert, subprocess calls

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
